# wlr-sunclock

./: .clang-format  .gitignore  README.md  astro.c  main.c  meson.build  release
.github/: tile
include/: astro.h  config.h  gui.h  map.h  version.h
src/: astro.c  astro.h  gui.c  main.c  map.c  map.h  version.h
